--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div id="wrapper" class="fade-in">
       <div id="intro">
         <h1 style="color:rgb(104, 70, 8);">    <!-- 글자색 변경 --><!-- 입력 -->
-          AI시대 </h1>
-          <h2 style="color:rgb(86, 67, 134);">개발자로 살아가기</h2>
+          AI시대, 개발자로 살아가기 </h1>
+          <h2 style="color:rgb(218, 29, 29);">개발자가 되자</h2>
         
         <ul class="actions">
           <li>
@@ -29,7 +29,7 @@
       </div> 
       <header id="header">
         <!-- 입력 -->
-        <a href="index.html" class="logo" style="color:rgb(0, 0, 0);">페이지 이름</a>
+        <a href="index.html" class="logo" style="color:rgb(134, 61, 61);">개발자</a>
       </header>
       <nav id="nav">
         <ul class="links">
@@ -47,11 +47,16 @@
 
             <!-- 입력 -->
             <h2 style="color:rgb(62, 29, 62);">
-              입력
+              개발자란?
             </h2>
+            <a href="https://www.yes24.com/Product/Goods/121807736"><img src="images/11.PNG"/></a>
             <!-- 입력 -->
             <h4 style="color:rgb(77, 111, 28);">
-              입력
+              개발자는 소프트웨어를 설계하고 구축하는 전문가입니다.</br> 이는 컴퓨터 프로그래밍 언어를 사용하여 소프트웨어 애플리케이션을 개발하고 유지보수하는 업무를 맡습니다.</br>
+개발자는 소프트웨어 개발의 전 과정을 담당하며 다양한 분야에서 활동할수있는데, 예를들어 웹 개발자는 모바일 앱을 개발하고 데이터베이스 개발자는, 게임 개발자, 시스템 개발자 등 다양한 전문분야가 있습니다.</br>
+
+이러한 개발자가 되기 위해 컴퓨터공학,수학과,통계학과와 같은 대학학과를 나오면 좋습니다.</br>그리고 수학과 관련된 일을 하기때문에 수학을 잘하면 이점이 있습니다.
+
 	          </h4>
         </article>
 
@@ -59,7 +64,10 @@
     <article class="post featured">
              <!-- 입력 -->
             <h4 style="color:rgb(0, 0, 0);">
-              입력
+              소감문</br> 개발자에 대한 설명과 이야기들을 듣고 ai에 관한 영상들을 보고나니 내 진로에 한발짝 더 가까워 진 느낌이었고,</br>그리고 개발자가 되기 위해
+              어떻게 살아야 할지도 생각해보게 되어서 되게 의미있는 시간을 보낸 것 같아서 좋았던것같다. </br> ai시대 개발자로 살아가려면 코딩과 같은 컴퓨터 작업들이 자신의 적성과 맞아야 하고 수학을 잘해야한다는점, 개발자는 대학 간판보다는 능력을 중요시 한다는 점 등을 알게되었는데, 이러한 이야기들을 들으면서 개발자의 종류가 한둘이 아니라 여러가지라는점도 배웠다. 개발자가 되려면 컴퓨터 공학, 수학과, 통계학과 등등 다양한 학과를 들어가서 개발자가 될 수있다.
+              그래서 나는 어떤 개발자가 적성에 맞을지, 어떤 학과에 들어가야 내가 원하는 일을 할 수 있을지 생각해보게 되었다.</br>그리고 자기를 개발하는 셀프브랜딩의 중요성도 알게되었다. 
+              
               </h4> 
 
               <ul class="actions special">
@@ -88,7 +96,7 @@
 
       <!-- 입력 -->
             <h3 style="color:rgb(83, 128, 0);">Email</h3>
-            <p>가나다 / abc@gmail.com</a></p>
+            <p>김성재 / 2023s10204@h.jne.go.kr</a></p>
           </section>
       </footer>
 
