--- a/2page.html
+++ b/2page.html
@@ -18,7 +18,7 @@
     <div id="wrapper" class="fade-in">
       <!-- 입력 -->
       <header id="header">
-        <a href="index.html" class="logo" style="color:rgb(93, 102, 19);">페이지 이름</a>
+        <a href="index.html" class="logo" style="color:rgb(93, 102, 19);">ai가 개발자에게 미치는 영향</a>
       </header>
       <nav id="nav">
         <ul class="links">
@@ -33,25 +33,28 @@
       <article class="post featured">
 
         <!-- 입력 -->
-          <h3 style="color:rgb(93, 102, 19);">입력</h3>
+          <h3 style="color:rgb(93, 102, 19);">생산성 향상</h3>
           <h5 style="color:rgb(0, 0, 0);">
-            	입력
+            AI 기술은 개발 프로세스를 자동화하고 최적화함으로써 개발자들의 생산성을 향상시킵니다.
+          </br>예를 들어, 자동화된 테스트, 코드 생성 및 디버깅 도구를 이용하여 개발 시간을 단축할 수 있습니다.
             </h5></article>
 
 
         <!-- 입력 -->
         <article class="post featured">
-          <h3 style="color:rgb(19, 102, 54);">입력</h3>
+          <h3 style="color:rgb(19, 102, 54);">자동화에 대한 우려</h3>
           <h5 style="color:rgb(0, 0, 0);">
-          입력
+            AI 기술이 계속 발전하면서, 개발자들은 자동화로 인해 일부분의 개발 작업이 대체될 우려가 있습니다.
+          </br>이에 대비하여 개발자들은 새로운 기술 및 역량을 습득하여 산업의 변화에 대응해야 할 것입니다.
         </h5></article>
 
 
         <!-- 입력 -->
         <article class="post featured">
-          <h3 style="color:rgb(106, 22, 22);">ㅎㅇ</h3>
+          <h3 style="color:rgb(106, 22, 22);">인공지능과 소프트웨어 개발의 미래</h3>
         <h5 style="color:rgb(0, 0, 0);">
-          입력</h5>
+          몬트리올 AI 윤리 연구소의 아비섹 굽타 창립자는 “1년 전만 해도 생성AI 시스템에 대한 기대나 성능은 지금 예상하는 수준과 전혀 달랐다”며
+        “AI의 발전이 앞으로 어떤 형태를 취할지 예측하는 것은 불가능하다”고 밝혔다.</br> 그래서 ai의 발전이 더욱 기대 되는것 같다.</h5>
       </section>
 
         <!-- Footer -->
@@ -70,7 +73,7 @@
               <div class="field">
            <!-- 입력 -->
               <h3>Email</h3>
-              <p>가나다 / abc@gmail.com</a></p>
+              <p>김성재 / 2023s10204@h.jne.go.kr</a></p>
             </article>
           </section>
       </footer>
